edit profile now edits the text fields of the profile fragment. I added a json file to read from however it still does not work when the application is restarted

--- a/app/src/main/res/layout/fragment_profile_edit.xml
+++ b/app/src/main/res/layout/fragment_profile_edit.xml
@@ -124,7 +124,7 @@
 
         <!-- Edit Profile Button -->
         <Button
-                android:id="@+id/btn_edit_profile"
+                android:id="@+id/btn_save"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="@string/save"
