--- a/app/src/main/res/layout/instructor_layout.xml
+++ b/app/src/main/res/layout/instructor_layout.xml
@@ -8,6 +8,7 @@
 
         <androidx.cardview.widget.CardView
                 android:id="@+id/firstCard"
+                android:clickable="true"
                 android:layout_width="match_parent"
                 android:layout_height="150dp"
                 app:cardCornerRadius="8dp"
@@ -20,9 +21,10 @@
 
                 <VideoView
                         android:layout_width="150dp"
-                        android:layout_height="wrap_content"
+                        android:layout_height="150dp"
                         android:id="@+id/video1"
                         android:background="@drawable/boarder"/>
+
                 <TextView
                         android:text="@string/title"
                         style="@style/primary_header"
@@ -35,12 +37,32 @@
                         android:text="@string/body"
                         style="@style/body_text"
                         android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_alignParentBottom="true"
+                        android:layout_height="match_parent"
                         android:layout_alignParentEnd="true"
                         android:layout_below="@id/title"
                         android:layout_toEndOf="@id/video1"
                         android:id="@+id/description"/>
+               <!-- <TextView
+                        android:text="Equipment"
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:layout_below="@+id/video1"
+                        android:id="@+id/equip"/>
+                <TextView
+                        android:text="Targets"
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+
+                        android:layout_below="@+id/video1"
+                        android:layout_toEndOf="@+id/equip"
+                        android:id="@+id/target"/>
+                <TextView
+                        android:text="Calories"
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:layout_below="@+id/video1"
+                        android:layout_toEndOf="@+id/target"
+                        android:id="@+id/calorie"/> -->
             </RelativeLayout>
         </androidx.cardview.widget.CardView>
 </LinearLayout>
