--- a/app/src/main/res/layout/fragment_instructor.xml
+++ b/app/src/main/res/layout/fragment_instructor.xml
@@ -6,7 +6,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context=".Instructor"
-            android:background="@drawable/gradients" tools:ignore="ExtraText">
+            android:background="@drawable/gradient_blue" tools:ignore="ExtraText">
 
     <androidx.cardview.widget.CardView
             android:id="@+id/search_bar"
