--- a/app/src/main/res/layout/fragment_profile_edit.xml
+++ b/app/src/main/res/layout/fragment_profile_edit.xml
@@ -12,16 +12,34 @@
             android:gravity="center">
 
         <!-- Profile Picture -->
-        <ImageView
-                android:id="@+id/profile_image"
-                android:layout_width="120dp"
-                android:layout_height="120dp"
-                android:layout_marginTop="16dp"
+        <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:gravity="center_vertical"
                 android:layout_marginBottom="16dp"
-                android:contentDescription="@string/profile_image_description"
-                android:scaleType="centerCrop"
-                android:background="@drawable/circle_background"
-        />
+                android:layout_marginEnd="54dp">
+
+            <!-- Back Arrow -->
+            <ImageButton
+                    android:id="@+id/back_button"
+                    android:layout_width="48dp"
+                    android:layout_height="48dp"
+                    android:background="@android:color/transparent"
+                    android:src="@drawable/back_arrow"
+                    android:tint="@color/black"
+                    android:contentDescription="@string/back_button"
+                    android:layout_marginEnd="60dp" />
+
+            <!-- Profile Picture -->
+            <ImageView
+                    android:id="@+id/profile_image"
+                    android:layout_width="120dp"
+                    android:layout_height="120dp"
+                    android:contentDescription="@string/profile_image_description"
+                    android:scaleType="centerCrop"
+                    android:background="@drawable/circle_background" />
+        </LinearLayout>
 
         <!-- Username -->
         <TextView
