--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -39,10 +39,12 @@
     <FrameLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent">
-        <ImageButton
+        <com.google.android.material.imageview.ShapeableImageView
                 android:src="@android:drawable/sym_def_app_icon"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="72dp"
+                android:layout_height="72dp"
+                app:shapeAppearanceOverlay="@style/circle"
+                android:scaleType="centerCrop"
                 android:id="@+id/user_avatar"
                 android:layout_gravity="top|end"
                 android:background="@null"
