--- a/app/src/main/res/drawable/gradient_yellow.xml
+++ b/app/src/main/res/drawable/gradient_yellow.xml
@@ -2,7 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <gradient
             android:angle="135"
-            android:startColor="#FFF8DC"
-            android:endColor="#FFD700"
+            android:startColor="#FFEB3B"
+            android:endColor="#FFF9C4"
             android:type="linear" />
 </shape>
