--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -85,4 +85,8 @@
             android:layout_height="match_parent"
             android:background="#80000000"
             android:visibility="gone" />
+    <FrameLayout
+            android:id="@+id/fragment_container"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
 </FrameLayout>
