--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -5,7 +5,13 @@
         <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
     </style>
 
-    <style name="Theme.MyApplication" parent="Base.Theme.MyApplication">
+    <style name="Theme.MyApplicationYellow" parent="Base.Theme.MyApplication">
+        <item name="android:windowBackground">@drawable/gradient_yellow</item>
+    </style>
+    <style name="Theme.MyApplicationBlue" parent="Base.Theme.MyApplication">
         <item name="android:windowBackground">@drawable/gradient_blue</item>
+    </style>
+    <style name="Theme.MyApplicationGray" parent="Base.Theme.MyApplication">
+        <item name="android:windowBackground">@drawable/gradient_gray</item>
     </style>
 </resources>
