--- a/app/src/main/res/layout/fragment_group_finder.xml
+++ b/app/src/main/res/layout/fragment_group_finder.xml
@@ -3,7 +3,7 @@
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
-             tools:context=".GroupFinder"
+             tools:context=".FriendFinder"
              android:background="@drawable/gradient_blue">
 
     <!-- TODO: Update blank fragment layout -->
