--- a/app/src/main/res/layout/fragment_sign_up.xml
+++ b/app/src/main/res/layout/fragment_sign_up.xml
@@ -114,7 +114,7 @@
                 style="?android:attr/borderlessButtonStyle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/sign_up_text"
+                android:text="@string/next"
                 android:textColor="@color/white"
                 android:backgroundTint="@android:color/transparent"
                 android:layout_margin="0dp"
