Finished functionality so that adding friends works as intended. Needs to add server side code to it

--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -26,7 +26,7 @@
     </fragment>
 
     <fragment android:id="@+id/FriendsFragment"
-              android:name="com.example.myapplication.AddFriends"
+              android:name="com.example.myapplication.FriendFinder"
               android:label="fragment_add_friends"
               tools:layout="@layout/fragment_add_friends"/>
 
