--- a/app/src/main/res/layout/friendprofile.xml
+++ b/app/src/main/res/layout/friendprofile.xml
@@ -1,13 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView
         xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-
-        xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:layout_marginHorizontal="8dp"
         app:cardCornerRadius="8dp"
         app:cardUseCompatPadding="true"
-        android:layout_marginHorizontal="8dp"
         app:cardElevation="12dp">
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -28,20 +27,39 @@
                     android:id="@+id/logoIv"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:contentDescription="@string/profile_image_description" android:scaleType="fitXY" />
+                    android:contentDescription="@string/profile_image_description"
+                    android:scaleType="fitXY"
+                    android:background="@drawable/circle_background" />
         </androidx.cardview.widget.CardView>
 
         <TextView
                 android:id="@+id/usernameVar"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
                 android:text="@string/username_placeholder"
                 android:textSize="16sp"
                 android:textStyle="bold"
                 android:textColor="@color/black"
+                app:layout_constraintStart_toEndOf="@id/cardView"
+                app:layout_constraintEnd_toStartOf="@id/addFriendButton"
+                app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"
+                android:layout_marginStart="8dp"
+                android:layout_marginEnd="8dp"
+                android:gravity="center" />
+
+        <ImageButton
+                android:id="@+id/addFriendButton"
+                android:layout_width="24dp"
+                android:layout_height="24dp"
+                android:background="?attr/selectableItemBackgroundBorderless"
+                android:src="@drawable/ic_baseline_person_add_24"
+                android:contentDescription="add_friend_icon"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.cardview.widget.CardView>
+
+
+
