--- a/app/src/main/res/layout/challenge_finder.xml
+++ b/app/src/main/res/layout/challenge_finder.xml
@@ -5,20 +5,20 @@
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".MainActivity"
-        android:background="@drawable/gradient_blue">
+        android:background="@drawable/gradient_blue"
+        tools:context=".ChallengeFinder">
 
+    <!-- MaterialCardView for SearchView -->
     <com.google.android.material.card.MaterialCardView
             android:id="@+id/materialCardView"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            app:cardCornerRadius="8dp"
-            app:cardElevation="12dp"
+
             app:cardUseCompatPadding="true"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent">
+            app:layout_constraintTop_toTopOf="parent"
+            android:layout_margin="10dp">
 
         <androidx.appcompat.widget.SearchView
                 android:id="@+id/searchView"
@@ -27,17 +27,20 @@
                 android:background="@color/white"
                 app:iconifiedByDefault="false"
                 app:queryBackground="@android:color/transparent"
-                app:queryHint="Search here ..." />
-
+                app:queryHint="Search challenges..." />
     </com.google.android.material.card.MaterialCardView>
 
+    <!-- RecyclerView -->
     <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/recyclerView"
+            android:id="@+id/challengesRecyclerView"
             android:layout_width="0dp"
             android:layout_height="0dp"
+            android:layout_marginTop="8dp"
+            app:layout_constraintTop_toBottomOf="@id/materialCardView"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/materialCardView" />
+            app:layout_constraintEnd_toEndOf="parent"
+            tools:listitem="@layout/challenge_finder_card" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
+
