--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -9,8 +9,11 @@
 
     <style name="body_text">
         <item name="fontFamily">@font/inder_regular</item>
-        <item name="android:textStyle">normal</item>
-        <item name="android:textColor">@color/light_text</item>
+        <item name="android:shadowColor">@color/black</item>
+        <item name="android:shadowDx">0</item>
+        <item name="android:shadowDy">0</item>
+        <item name="android:shadowRadius">2</item>
+        <item name="android:textColor">@color/white</item>
         <item name="android:textSize">15sp</item>
     </style>
     <style name="login_text">
@@ -23,6 +26,14 @@
     <style name="circle">
         <item name="cornerFamily">rounded</item>
         <item name="cornerSize">50%</item>
+    </style>
+    <style name="main_text">
+        <item name="android:shadowColor">@color/black</item>
+        <item name="android:shadowDx">0</item>
+        <item name="android:shadowDy">0</item>
+        <item name="android:shadowRadius">2</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="android:textSize">32sp</item>
     </style>
 
 </resources>
