--- a/app/src/main/res/layout/fragment_second.xml
+++ b/app/src/main/res/layout/fragment_second.xml
@@ -9,7 +9,7 @@
             android:id="@+id/textview_first"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/login_text"
+            android:text="@string/login_header"
             android:textSize="50sp"
             android:fontFamily="sans-serif-medium"
             android:gravity="center"
