--- a/app/src/main/res/drawable/circular_background.xml
+++ b/app/src/main/res/drawable/circular_background.xml
@@ -8,15 +8,14 @@
         </shape>
     </item>
 
-    <!-- Inner Circle (Padding inside the border) -->
+    <!-- Inner Circle (Background) -->
     <item
             android:left="4dp"
             android:top="4dp"
             android:right="4dp"
             android:bottom="4dp">
         <shape android:shape="oval">
-            <solid android:color="@android:color/transparent"/> <!-- Background color -->
+            <solid android:color="@android:color/transparent"/> <!-- Transparent background -->
         </shape>
     </item>
-
 </layer-list>
