--- a/app/src/main/res/layout/fragment_second.xml
+++ b/app/src/main/res/layout/fragment_second.xml
@@ -13,13 +13,14 @@
             android:layout_height="100dp"
             android:layout_marginTop="40dp"
             android:contentDescription="logo_icon"
-            android:scaleType="centerCrop"
             android:src="@drawable/icon"
-    android:background="@drawable/circular_background"
-    android:padding="0dp"
-    app:layout_constraintTop_toTopOf="parent"
-    app:layout_constraintStart_toStartOf="parent"
-    app:layout_constraintEnd_toEndOf="parent" />
+            android:background="@drawable/circle_background"
+            android:padding="4dp"
+            android:clipToOutline="true"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent" />
+
 
 
 
@@ -34,7 +35,7 @@
             android:inputType="textEmailSubject"
             android:background="@drawable/border_white"
             android:padding="8dp"
-            android:layout_marginTop="80dp"
+            android:layout_marginTop="60dp"
             style="@style/login_text"
             app:layout_constraintTop_toBottomOf="@id/circular_image_view"
             app:layout_constraintStart_toStartOf="parent"
