--- a/app/src/main/res/layout/fragment_second.xml
+++ b/app/src/main/res/layout/fragment_second.xml
@@ -7,7 +7,7 @@
         android:background="@drawable/gradient_blue">
 
     <!-- Circular ImageView -->
-    <ImageView
+    <com.google.android.material.imageview.ShapeableImageView
             android:id="@+id/circular_image_view"
             android:layout_width="100dp"
             android:layout_height="100dp"
@@ -15,6 +15,8 @@
             android:contentDescription="logo_icon"
             android:src="@drawable/icon"
             android:background="@drawable/circle_background"
+            app:shapeAppearanceOverlay="@style/circle"
+            android:scaleType="centerCrop"
             android:padding="4dp"
             android:clipToOutline="true"
             app:layout_constraintTop_toTopOf="parent"
