--- a/app/src/main/res/layout/fragment_challenge_card_view.xml
+++ b/app/src/main/res/layout/fragment_challenge_card_view.xml
@@ -5,7 +5,7 @@
         android:layout_height="match_parent">
 
     <androidx.constraintlayout.widget.ConstraintLayout
-            android:visibility="invisible"
+            android:visibility="visible"
             android:layout_width="match_parent"
             android:layout_marginHorizontal="16dp"
             android:layout_height="392dp"
