--- a/app/src/main/res/layout/fragment_challenge_card_view.xml
+++ b/app/src/main/res/layout/fragment_challenge_card_view.xml
@@ -16,6 +16,7 @@
             android:background="#CDCDDC" android:id="@+id/challengeCardView">
         <TextView
                 android:text="@string/challengeCardTitle"
+                style="@style/primary_header"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" android:id="@+id/challengeTitle"
                 app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
@@ -47,6 +48,8 @@
                 app:layout_constraintEnd_toEndOf="parent" app:layout_constraintVertical_bias="0.203"/>
         <TextView
                 android:text="@string/conditionTitleText"
+                style="@style/primary_header"
+                android:textSize="20sp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" android:id="@+id/conditionTitle"
                 app:layout_constraintStart_toStartOf="@+id/conditionText"
@@ -54,6 +57,8 @@
                 app:layout_constraintVertical_bias="0.396" app:layout_constraintEnd_toStartOf="@+id/divider"/>
         <TextView
                 android:text="@string/punishmentTitleText"
+                style="@style/primary_header"
+                android:textSize="20sp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" android:id="@+id/punishmentTitle"
                 app:layout_constraintStart_toEndOf="@+id/divider" app:layout_constraintEnd_toEndOf="@+id/punishmentText"
