--- a/app/src/main/res/layout/instructor_layout.xml
+++ b/app/src/main/res/layout/instructor_layout.xml
@@ -36,6 +36,7 @@
                 <TextView
                         android:text="@string/body"
                         style="@style/body_text"
+                        android:textColor="@color/black"
                         android:layout_width="wrap_content"
                         android:layout_height="match_parent"
                         android:layout_alignParentEnd="true"
